SMHE-1613: Update unit test for GetPeriodicMeterReadsGasCommandExecutor
Signed-off-by: stefanermens <stefan.ermens@alliander.com>