@@ -4,7 +4,6 @@
 
 package org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.periodicmeterreads;
 
-import static java.util.Arrays.asList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Fail.fail;
 import static org.mockito.ArgumentMatchers.any;
@@ -13,11 +12,10 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import org.joda.time.DateTime;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -29,21 +27,9 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
-import org.openmuc.jdlms.AttributeAddress;
 import org.openmuc.jdlms.GetResult;
-import org.openmuc.jdlms.ObisCode;
 import org.openmuc.jdlms.datatypes.DataObject;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.AttributeAddressForProfile;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.DlmsCaptureObject;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.DlmsObjectConfigService;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.DlmsObjectType;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.model.DlmsClock;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.model.DlmsExtendedRegister;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.model.DlmsObject;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.model.DlmsProfile;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.model.Medium;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.model.ProfileCaptureTime;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.model.RegisterUnit;
+import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.utils.AmrProfileStatusCodeHelper;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.utils.DlmsDateTimeConverter;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.utils.DlmsHelper;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.entities.DlmsDevice;
@@ -51,6 +37,11 @@ import org.opensmartgridplatform.adapter.protocol.dlms.domain.entities.Protocol;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.factories.DlmsConnectionManager;
 import org.opensmartgridplatform.adapter.protocol.dlms.exceptions.ProtocolAdapterException;
 import org.opensmartgridplatform.adapter.protocol.dlms.infra.messaging.DlmsMessageListener;
+import org.opensmartgridplatform.dlms.exceptions.ObjectConfigException;
+import org.opensmartgridplatform.dlms.objectconfig.Attribute;
+import org.opensmartgridplatform.dlms.objectconfig.CosemObject;
+import org.opensmartgridplatform.dlms.objectconfig.DlmsObjectType;
+import org.opensmartgridplatform.dlms.services.ObjectConfigService;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.ChannelDto;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.CosemDateDto;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.CosemDateTimeDto;
@@ -72,9 +63,11 @@ class GetPeriodicMeterReadsGasCommandExecutorTest {
 
   @Mock private DlmsHelper dlmsHelper;
 
-  @Mock private DlmsObjectConfigService dlmsObjectConfigService;
+  @Mock private ObjectConfigService objectConfigService;
 
   @Mock private DlmsConnectionManager connectionManager;
+
+  @Mock private AmrProfileStatusCodeHelper amrProfileStatusCodeHelper;
 
   private final DlmsDevice device = this.createDevice(Protocol.DSMR_4_2_2);
   private final long from = 1111110L;
@@ -100,7 +93,7 @@ class GetPeriodicMeterReadsGasCommandExecutorTest {
   }
 
   @Test
-  void testExecuteObjectNotFound() {
+  void testExecuteObjectNotFound() throws ProtocolAdapterException, ObjectConfigException {
     // SETUP
     final PeriodicMeterReadsRequestDto request =
         new PeriodicMeterReadsRequestDto(
@@ -108,17 +101,17 @@ class GetPeriodicMeterReadsGasCommandExecutorTest {
             this.fromDateTime.toDate(),
             this.toDateTime.toDate(),
             ChannelDto.ONE);
-    when(this.dlmsObjectConfigService.findAttributeAddressForProfile(
-            any(), any(), any(), any(), any(), any(), eq(true)))
+    when(this.objectConfigService.getOptionalCosemObject(any(), any(), any()))
         .thenReturn(Optional.empty());
+    when(this.objectConfigService.getCosemObject(any(), any(), any()))
+        .thenThrow(new IllegalArgumentException("Object not found"));
 
     // CALL
     try {
       this.executor.execute(this.connectionManager, this.device, request, this.messageMetadata);
-      fail("When no matching object is found, then execute should fail");
-    } catch (final ProtocolAdapterException e) {
-      assertThat(e.getMessage())
-          .isEqualTo("No address found for " + DlmsObjectType.DAILY_LOAD_PROFILE);
+      fail("When no matching profile object is found, then execute should fail");
+    } catch (final IllegalArgumentException e) {
+      assertThat(e.getMessage()).isEqualTo("Object not found");
     }
   }
 
@@ -140,104 +133,104 @@ class GetPeriodicMeterReadsGasCommandExecutorTest {
         DlmsDateTimeConverter.toDateTime(new Date(this.to), this.device.getTimezone());
 
     // SETUP - dlms objects
-    final DlmsObject dlmsClock = new DlmsClock("0.0.1.0.0.255");
-    final DlmsCaptureObject captureObject1 = new DlmsCaptureObject(dlmsClock, 2);
+    final Attribute attributeCaptureObjects =
+        this.createAttribute(
+            3, "CLOCK,2|AMR_PROFILE_STATUS,2|MBUS_MASTER_VALUE,2|MBUS_MASTER_VALUE,5");
+    final Attribute attributeCapturePeriod = this.createAttribute(4, "86400");
+    final CosemObject profile =
+        this.createCosemObject(
+            "DAILY_VALUES_G",
+            "1.x.3.4.5.6",
+            "GAS",
+            List.of(attributeCaptureObjects, attributeCapturePeriod));
 
-    final DlmsObject dlmsExtendedRegister =
-        new DlmsExtendedRegister(
-            DlmsObjectType.MBUS_MASTER_VALUE, "0.0.24.0.0.255", 0, RegisterUnit.M3, Medium.GAS);
-    final DlmsCaptureObject captureObject2 = new DlmsCaptureObject(dlmsExtendedRegister, 2);
-    final DlmsCaptureObject captureObject3 = new DlmsCaptureObject(dlmsExtendedRegister, 5);
+    final CosemObject clock =
+        this.createCosemObject("CLOCK", "0.0.1.0.0.255", "ABSTRACT", List.of());
+    final CosemObject status =
+        this.createCosemObject("AMR_PROFILE_STATUS", "0.x.1.2.3.255", "GAS", List.of());
 
-    final List<DlmsCaptureObject> captureObjects =
-        Arrays.asList(captureObject1, captureObject2, captureObject3);
-
-    final DlmsProfile dlmsProfile =
-        new DlmsProfile(
-            DlmsObjectType.DAILY_LOAD_PROFILE,
-            "1.2.3.4.5.6",
-            captureObjects,
-            ProfileCaptureTime.DAY,
-            Medium.COMBINED);
+    final Attribute attributeScalerUnit = this.createAttribute(3, "0, M3");
+    final CosemObject value_g =
+        this.createCosemObject(
+            "MBUS_MASTER_VALUE", "0.x.24.1.0.255", "GAS", List.of(attributeScalerUnit));
 
     // SETUP - mock dlms object config to return attribute addresses
-    final AttributeAddressForProfile attributeAddressForProfile =
-        this.createAttributeAddressForProfile(dlmsProfile, captureObjects);
-    final AttributeAddress attributeAddressScalerUnit =
-        this.createAttributeAddress(dlmsExtendedRegister);
+    when(this.objectConfigService.getOptionalCosemObject(
+            "DSMR", "4.2.2", DlmsObjectType.DAILY_VALUES_G))
+        .thenReturn(Optional.of(profile));
+    when(this.objectConfigService.getCosemObject("DSMR", "4.2.2", DlmsObjectType.CLOCK))
+        .thenReturn(clock);
+    when(this.objectConfigService.getCosemObject(
+            "DSMR", "4.2.2", DlmsObjectType.AMR_PROFILE_STATUS))
+        .thenReturn(status);
+    when(this.objectConfigService.getCosemObject("DSMR", "4.2.2", DlmsObjectType.MBUS_MASTER_VALUE))
+        .thenReturn(value_g);
 
-    when(this.dlmsObjectConfigService.findAttributeAddressForProfile(
-            eq(this.device),
-            eq(DlmsObjectType.DAILY_LOAD_PROFILE),
-            eq(channel.getChannelNumber()),
-            eq(convertedFromTime),
-            eq(convertedToTime),
-            eq(Medium.GAS),
-            eq(true)))
-        .thenReturn(Optional.of(attributeAddressForProfile));
-
-    when(this.dlmsObjectConfigService.getAttributeAddressesForScalerUnit(
-            eq(attributeAddressForProfile), eq(channel.getChannelNumber())))
-        .thenReturn(Collections.singletonList(attributeAddressScalerUnit));
-
-    final DlmsObject intervalTime = mock(DlmsObject.class);
-    when(this.dlmsObjectConfigService.findDlmsObject(
-            any(Protocol.class), any(DlmsObjectType.class), any(Medium.class)))
-        .thenReturn(Optional.of(intervalTime));
+    when(this.dlmsHelper.getAccessSelectionTimeRangeParameter(
+            eq(this.fromDateTime), eq(this.toDateTime), any()))
+        .thenReturn(mock(DataObject.class));
 
     // SETUP - mock dlms helper to return data objects on request
-    final DataObject data0 = mock(DataObject.class);
-    final DataObject data1 = mock(DataObject.class);
-    final DataObject data2 = mock(DataObject.class);
+    final DataObject data0 = mock(DataObject.class); // clock
+    final DataObject data1 = mock(DataObject.class); // status
+    final DataObject data2 = mock(DataObject.class); // value
+    final DataObject data3 = mock(DataObject.class); // capture time
     final DataObject bufferedObject1 = mock(DataObject.class);
-    when(bufferedObject1.getValue()).thenReturn(asList(data0, data1, data2));
+    when(bufferedObject1.getValue()).thenReturn(List.of(data0, data1, data2, data3));
+    when(data1.isNumber()).thenReturn(true);
+    when(data1.getValue()).thenReturn(0);
 
-    final DataObject data3 = mock(DataObject.class);
-    final DataObject data4 = mock(DataObject.class);
-    final DataObject data5 = mock(DataObject.class);
+    final DataObject data4 = mock(DataObject.class); // clock
+    final DataObject data5 = mock(DataObject.class); // status
+    final DataObject data6 = mock(DataObject.class); // value
+    final DataObject data7 = mock(DataObject.class); // capture time
     final DataObject bufferedObject2 = mock(DataObject.class);
-    when(bufferedObject2.getValue()).thenReturn(asList(data3, data4, data5));
+    when(bufferedObject2.getValue()).thenReturn(List.of(data4, data5, data6, data7));
+    when(data5.isNumber()).thenReturn(true);
+    when(data5.getValue()).thenReturn(0);
 
-    final DataObject data6 = mock(DataObject.class);
-    final DataObject data7 = mock(DataObject.class);
-    final DataObject data8 = mock(DataObject.class);
+    final DataObject data8 = mock(DataObject.class); // clock
+    final DataObject data9 = mock(DataObject.class); // status
+    final DataObject data10 = mock(DataObject.class); // value
+    final DataObject data11 = mock(DataObject.class); // capture time
     final DataObject bufferedObject3 = mock(DataObject.class);
-    when(bufferedObject3.getValue()).thenReturn(asList(data6, data7, data8));
+    when(bufferedObject3.getValue()).thenReturn(List.of(data8, data9, data10, data11));
 
     final DataObject resultData = mock(DataObject.class);
-    when(resultData.getValue()).thenReturn(asList(bufferedObject1, bufferedObject2));
+    when(resultData.getValue()).thenReturn(List.of(bufferedObject1, bufferedObject2));
 
     final String expectedDescription =
-        "retrieve periodic meter reads for " + periodType + ", channel " + channel;
+        "retrieve periodic meter reads for "
+            + periodType
+            + ", channel "
+            + channel.getChannelNumber();
     final GetResult getResult = mock(GetResult.class);
     when(this.dlmsHelper.getAndCheck(
-            eq(this.connectionManager),
-            eq(this.device),
-            eq(expectedDescription),
-            eq(attributeAddressForProfile.getAttributeAddress())))
-        .thenReturn(Collections.singletonList(getResult));
-    when(this.dlmsHelper.getAndCheck(
-            this.connectionManager, this.device, expectedDescription, attributeAddressScalerUnit))
-        .thenReturn(Collections.singletonList(getResult));
+            eq(this.connectionManager), eq(this.device), eq(expectedDescription), any()))
+        .thenReturn(List.of(getResult));
 
     when(this.dlmsHelper.readDataObject(eq(getResult), any(String.class))).thenReturn(resultData);
 
     // Make mocks return different times for each meterread. The last meterread has a time
-    // outside of the requested period, causing the meterread to be not included in the result.
+    // outside the requested period, causing the meterread to be not included in the result.
     final CosemDateTimeDto timeMeterRead1 = new CosemDateTimeDto(this.fromDateTime);
     final CosemDateTimeDto timeMeterRead2 = new CosemDateTimeDto(this.fromDateTime.plusMinutes(1));
     final CosemDateTimeDto timeMeterRead3 = new CosemDateTimeDto(this.fromDateTime.plusYears(1));
     when(this.dlmsHelper.readDateTime(eq(data0), any())).thenReturn(timeMeterRead1);
-    when(this.dlmsHelper.readDateTime(eq(data2), any())).thenReturn(timeMeterRead1);
-    when(this.dlmsHelper.readDateTime(eq(data3), any())).thenReturn(timeMeterRead2);
-    when(this.dlmsHelper.readDateTime(eq(data5), any())).thenReturn(timeMeterRead2);
-    when(this.dlmsHelper.readDateTime(eq(data6), any())).thenReturn(timeMeterRead3);
+    when(this.dlmsHelper.readDateTime(eq(data3), any())).thenReturn(timeMeterRead1);
+    when(this.dlmsHelper.readDateTime(eq(data4), any())).thenReturn(timeMeterRead2);
+    when(this.dlmsHelper.readDateTime(eq(data7), any())).thenReturn(timeMeterRead2);
     when(this.dlmsHelper.readDateTime(eq(data8), any())).thenReturn(timeMeterRead3);
+    when(this.dlmsHelper.readDateTime(eq(data11), any())).thenReturn(timeMeterRead3);
+
+    when(this.amrProfileStatusCodeHelper.toAmrProfileStatusCodeFlags(0)).thenReturn(Set.of());
 
     final DlmsMeterValueDto meterValue1 = mock(DlmsMeterValueDto.class);
     final DlmsMeterValueDto meterValue2 = mock(DlmsMeterValueDto.class);
-    when(this.dlmsHelper.getScaledMeterValue(data1, null, "gasValue")).thenReturn(meterValue1);
-    when(this.dlmsHelper.getScaledMeterValue(data4, null, "gasValue")).thenReturn(meterValue2);
+    when(this.dlmsHelper.getScaledMeterValueWithScalerUnit(data2, "0, M3", "gasValue"))
+        .thenReturn(meterValue1);
+    when(this.dlmsHelper.getScaledMeterValueWithScalerUnit(data6, "0, M3", "gasValue"))
+        .thenReturn(meterValue2);
 
     // CALL
     final PeriodicMeterReadGasResponseDto result =
@@ -250,12 +243,9 @@ class GetPeriodicMeterReadsGasCommandExecutorTest {
                 "GetPeriodicMeterReadsGas for channel ONE, DAILY from %s until %s, retrieve attribute: {%s,%s,%s}",
                 convertedFromTime,
                 convertedToTime,
-                dlmsProfile.getClassId(),
-                dlmsProfile.getObisCodeAsString(),
-                dlmsProfile.getDefaultAttributeId()));
-
-    verify(this.dlmsObjectConfigService)
-        .findDlmsObject(any(Protocol.class), any(DlmsObjectType.class), any(Medium.class));
+                profile.getClassId(),
+                profile.getObis().replace("x", String.valueOf(channel.getChannelNumber())),
+                2));
 
     // ASSERT - the result should contain 2 values
     final List<PeriodicMeterReadsGasResponseItemDto> periodicMeterReads =
@@ -286,22 +276,21 @@ class GetPeriodicMeterReadsGasCommandExecutorTest {
         .isTrue();
   }
 
-  private AttributeAddress createAttributeAddress(final DlmsObject dlmsObject) {
-    return new AttributeAddress(
-        dlmsObject.getClassId(),
-        new ObisCode(dlmsObject.getObisCodeAsString()),
-        dlmsObject.getDefaultAttributeId());
+  private CosemObject createCosemObject(
+      final String tag, final String obis, final String group, final List<Attribute> attributes) {
+    final CosemObject object = new CosemObject();
+    object.setTag(tag);
+    object.setObis(obis);
+    object.setGroup(group);
+    object.setAttributes(attributes);
+    return object;
   }
 
-  private AttributeAddressForProfile createAttributeAddressForProfile(
-      final DlmsObject dlmsObject, final List<DlmsCaptureObject> selectedObjects) {
-    return new AttributeAddressForProfile(
-        new AttributeAddress(
-            dlmsObject.getClassId(),
-            new ObisCode(dlmsObject.getObisCodeAsString()),
-            dlmsObject.getDefaultAttributeId(),
-            null),
-        selectedObjects);
+  private Attribute createAttribute(final int id, final String value) {
+    final Attribute attribute = new Attribute();
+    attribute.setId(id);
+    attribute.setValue(value);
+    return attribute;
   }
 
   private DlmsDevice createDevice(final Protocol protocol) {
